--- a/mybatis-boot/pom.xml
+++ b/mybatis-boot/pom.xml
@@ -18,6 +18,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.wang.mybatis</groupId>
+            <artifactId>mybatis-hostswap-springboot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
