--- a/mybatis-reload-web/.env.development
+++ b/mybatis-reload-web/.env.development
@@ -2,4 +2,4 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://127.0.0.1:8051/api/wang/mybatis'
+VUE_APP_BASE_API = '/api/wang/mybatis'
