--- a/mybatis-reload-web/package.json
+++ b/mybatis-reload-web/package.json
@@ -15,13 +15,16 @@
   },
   "dependencies": {
     "axios": "0.18.1",
-    "core-js": "3.6.5",
+    "codemirror": "^5.64.0",
+    "core-js": "^3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "jsonlint": "^1.6.3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
-    "vue": "2.6.10",
+    "script-loader": "^0.7.2",
+    "vue": "2.6.13",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
@@ -48,7 +51,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.13"
   },
   "browserslist": [
     "> 1%",
