--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>2.6.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.wang.myabtis</groupId>
+    <groupId>io.github.youtiaoguagua</groupId>
     <artifactId>mybatis-hotswap</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>mybatis-hotswap</name>
     <description>mybatis-hotswap</description>
     <packaging>pom</packaging>
@@ -19,17 +19,37 @@
         <module>mybatis-hotswap-springboot-starter</module>
         <module>mybatis-boot</module>
     </modules>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-staging</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
 
+
+    <!--<build>-->
+    <!--    <plugins>-->
+    <!--        <plugin>-->
+    <!--            <groupId>org.springframework.boot</groupId>-->
+    <!--            <artifactId>spring-boot-maven-plugin</artifactId>-->
+    <!--            <configuration>-->
+    <!--                <excludes>-->
+    <!--                    <exclude>-->
+    <!--                        <groupId>org.projectlombok</groupId>-->
+    <!--                        <artifactId>lombok</artifactId>-->
+    <!--                    </exclude>-->
+    <!--                </excludes>-->
+    <!--            </configuration>-->
+    <!--        </plugin>-->
+    <!--    </plugins>-->
+    <!--</build>-->
 </project>
