--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -32,12 +32,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!--<dependency>-->
-        <!--    <groupId>org.mybatis.spring.boot</groupId>-->
-        <!--    <artifactId>mybatis-spring-boot-starter</artifactId>-->
-        <!--    <version>2.2.0</version>-->
-        <!--</dependency>-->
-        <!-- https://mvnrepository.com/artifact/io.methvin/directory-watcher -->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-core</artifactId>
+            <version>5.7.16</version>
+        </dependency>
         <dependency>
             <groupId>io.methvin</groupId>
             <artifactId>directory-watcher</artifactId>
