--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.wang.mybatis</groupId>
     <artifactId>mybatis-hostswap-springboot-starter</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>springboot-mybatis-hostswap-starter</name>
     <description>springboot-mybatis-hostswap-starter</description>
     <properties>
