--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.wang.myabtis</groupId>
     <artifactId>mybatis-hotswap</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>mybatis-hotswap</name>
     <description>mybatis-hotswap</description>
     <packaging>pom</packaging>
