--- a/mybatis-boot/pom.xml
+++ b/mybatis-boot/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.wang.mybatis</groupId>
             <artifactId>mybatis-hostswap-springboot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
