--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.6.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.wang.myabtis</groupId>
+    <groupId>com.youtiaoguagua.mybatis</groupId>
     <artifactId>mybatis-hotswap</artifactId>
     <version>1.0.0</version>
     <name>mybatis-hotswap</name>
@@ -19,17 +19,26 @@
         <module>mybatis-hotswap-springboot-starter</module>
         <module>mybatis-boot</module>
     </modules>
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
