--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -10,6 +10,29 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
+    <developers>
+        <developer>
+            <name>youtiaoguagua</name>
+            <email>youtiaoguagua@gmail.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:https://github.com/youtiaoguagua/mybatis-hotswap</connection>
+        <developerConnection>scm:git:git@github.com/youtiaoguagua/mybatis-hotswap.git</developerConnection>
+        <url>youtiaoguagua/mybatis-hotswap</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
+
 
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
     <name>springboot-mybatis-hotswap-starter</name>
@@ -54,105 +77,128 @@
 
     <build>
         <plugins>
-             <!--插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <!-- 前端资源目录，即：存放前端包目录-->
-                            <directory>src/main/resources/web</directory>
-                        </fileset>
-                        <fileset>
-                            <!-- Vue项目打包自动生成的dist目录 -->
-                            <directory>../mybatis-reload-web/dist</directory>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
+            <!-- &lt;!&ndash;插件maven-clean-plugin，用于在编译前，清除之前编译的文件、文件夹等，避免残留之前的内容 &ndash;&gt;-->
+            <!--<plugin>-->
+            <!--    <groupId>org.apache.maven.plugins</groupId>-->
+            <!--    <artifactId>maven-clean-plugin</artifactId>-->
+            <!--    <version>3.1.0</version>-->
+            <!--    <configuration>-->
+            <!--        <filesets>-->
+            <!--            <fileset>-->
+            <!--                &lt;!&ndash; 前端资源目录，即：存放前端包目录&ndash;&gt;-->
+            <!--                <directory>src/main/resources/web</directory>-->
+            <!--            </fileset>-->
+            <!--            <fileset>-->
+            <!--                &lt;!&ndash; Vue项目打包自动生成的dist目录 &ndash;&gt;-->
+            <!--                <directory>../mybatis-reload-web/dist</directory>-->
+            <!--            </fileset>-->
+            <!--        </filesets>-->
+            <!--    </configuration>-->
+            <!--</plugin>-->
 
-            <!--frontend-maven-plugin为项目本地下载/安装Node和NPM，运行npm install命令-->
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.12.0</version>
-                <configuration>
-                    <workingDirectory>../mybatis-reload-web</workingDirectory>
-                    <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>
-                    <npmDownloadRoot>https://npm.taobao.org/mirrors/npm/</npmDownloadRoot>
-                    <nodeVersion>v16.13.0</nodeVersion>
+            <!--&lt;!&ndash;frontend-maven-plugin为项目本地下载/安装Node和NPM，运行npm install命令&ndash;&gt;-->
+            <!--<plugin>-->
+            <!--    <groupId>com.github.eirslett</groupId>-->
+            <!--    <artifactId>frontend-maven-plugin</artifactId>-->
+            <!--    <version>1.12.0</version>-->
+            <!--    <configuration>-->
+            <!--        <workingDirectory>../mybatis-reload-web</workingDirectory>-->
+            <!--        <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>-->
+            <!--        <npmDownloadRoot>https://npm.taobao.org/mirrors/npm/</npmDownloadRoot>-->
+            <!--        <yarnDownloadRoot>https://npm.taobao.org/mirrors/yarn/</yarnDownloadRoot>-->
+            <!--        <nodeVersion>v16.13.0</nodeVersion>-->
+            <!--        <yarnVersion>v1.22.17</yarnVersion>-->
+            <!--    </configuration>-->
+            <!--    <executions>-->
+            <!--        &lt;!&ndash;<execution>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    &lt;!&ndash; optional: you don't really need execution ids, but it looks nice in your build log. &ndash;&gt;&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <id>install node and npm</id>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <goals>&ndash;&gt;-->
+            <!--        &lt;!&ndash;        <goal>install-node-and-npm</goal>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    </goals>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    &lt;!&ndash; optional: default phase is "generate-resources" &ndash;&gt;&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <phase>generate-resources</phase>&ndash;&gt;-->
+            <!--        &lt;!&ndash;</execution>&ndash;&gt;-->
+            <!--        <execution>-->
+            <!--            &lt;!&ndash; optional: you don't really need execution ids, but it looks nice in your build log. &ndash;&gt;-->
+            <!--            <id>install node and yarn</id>-->
+            <!--            <goals>-->
+            <!--                <goal>install-node-and-yarn</goal>-->
+            <!--            </goals>-->
+            <!--            &lt;!&ndash; optional: default phase is "generate-resources" &ndash;&gt;-->
+            <!--            <phase>generate-resources</phase>-->
+            <!--        </execution>-->
+            <!--        &lt;!&ndash; Install all project dependencies &ndash;&gt;-->
+            <!--        &lt;!&ndash;<execution>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <id>npm install</id>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <goals>&ndash;&gt;-->
+            <!--        &lt;!&ndash;        <goal>npm</goal>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    </goals>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <phase>generate-resources</phase>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    <configuration>&ndash;&gt;-->
+            <!--        &lt;!&ndash;        <arguments>install</arguments>&ndash;&gt;-->
+            <!--        &lt;!&ndash;    </configuration>&ndash;&gt;-->
+            <!--        &lt;!&ndash;</execution>&ndash;&gt;-->
+            <!--        <execution>-->
+            <!--            <id>yarn install</id>-->
+            <!--            <goals>-->
+            <!--                <goal>yarn</goal>-->
+            <!--            </goals>-->
+            <!--            <configuration>-->
+            <!--                &lt;!&ndash; optional: The default argument is actually-->
+            <!--                "install", so unless you need to run some other yarn command,-->
+            <!--                you can remove this whole <configuration> section.-->
+            <!--                &ndash;&gt;-->
+            <!--                <arguments>install</arguments>-->
+            <!--            </configuration>-->
+            <!--        </execution>-->
+            <!--        &lt;!&ndash; Build and minify static files &ndash;&gt;-->
+            <!--        <execution>-->
+            <!--            <id>yarn run build</id>-->
+            <!--            <goals>-->
+            <!--                <goal>yarn</goal>-->
+            <!--            </goals>-->
+            <!--            <configuration>-->
+            <!--                <arguments>run build:prod</arguments>-->
+            <!--            </configuration>-->
+            <!--        </execution>-->
+            <!--    </executions>-->
+            <!--</plugin>-->
 
-                </configuration>
-                <executions>
-                    <execution>
-                        <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-                        <id>install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <!-- optional: default phase is "generate-resources" -->
-                        <phase>generate-resources</phase>
-                    </execution>
-                    <!-- Install all project dependencies -->
-                    <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <phase>generate-resources</phase>
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
-                    <!-- Build and minify static files -->
-                    <execution>
-                        <id>npm run build</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>run build:prod</arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.2.0</version>
-                <executions>
-                    <execution>
-                        <id>copy static</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>copy-resources</goal>
-                        </goals>
-                        <configuration>
-                            <!-- 复制前端打包文件到这里 -->
-                            <outputDirectory>../mybatis-boot/src/main/resources/web</outputDirectory>
-                            <overwrite>true</overwrite>
-                            <resources>
-                                <resource>
-                                    <!-- 从前端打包的目录dist进行指定文件、文件夹内容的复制-->
-                                    <directory>../mybatis-reload-web/dist</directory>
-                                    <includes>
-                                        <!-- 具体根据实际前端代码、及目录结构进行配置-->
-                                        <include>css/</include>
-                                        <include>fonts/</include>
-                                        <include>img/</include>
-                                        <include>js/</include>
-                                        <include>favicon.ico</include>
-                                        <include>index.html</include>
-                                    </includes>
-                                </resource>
-                            </resources>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+            <!--    <groupId>org.apache.maven.plugins</groupId>-->
+            <!--    <artifactId>maven-resources-plugin</artifactId>-->
+            <!--    <version>3.2.0</version>-->
+            <!--    <executions>-->
+            <!--        <execution>-->
+            <!--            <id>copy static</id>-->
+            <!--            <phase>generate-resources</phase>-->
+            <!--            <goals>-->
+            <!--                <goal>copy-resources</goal>-->
+            <!--            </goals>-->
+            <!--            <configuration>-->
+            <!--                &lt;!&ndash; 复制前端打包文件到这里 &ndash;&gt;-->
+            <!--                <outputDirectory>../mybatis-boot/src/main/resources/web</outputDirectory>-->
+            <!--                <overwrite>true</overwrite>-->
+            <!--                <resources>-->
+            <!--                    <resource>-->
+            <!--                        &lt;!&ndash; 从前端打包的目录dist进行指定文件、文件夹内容的复制&ndash;&gt;-->
+            <!--                        <directory>../mybatis-reload-web/dist</directory>-->
+            <!--                        <includes>-->
+            <!--                            &lt;!&ndash; 具体根据实际前端代码、及目录结构进行配置&ndash;&gt;-->
+            <!--                            <include>css/</include>-->
+            <!--                            <include>fonts/</include>-->
+            <!--                            <include>img/</include>-->
+            <!--                            <include>js/</include>-->
+            <!--                            <include>favicon.ico</include>-->
+            <!--                            <include>index.html</include>-->
+            <!--                        </includes>-->
+            <!--                    </resource>-->
+            <!--                </resources>-->
+            <!--            </configuration>-->
+            <!--        </execution>-->
+            <!--    </executions>-->
+            <!--</plugin>-->
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -165,6 +211,40 @@
                         </exclude>
                     </excludes>
                     <layout>NONE</layout>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <!-- 这个configuration必须配置，用于gpg非交互式密码输入 -->
+                    <gpgArguments>
+                        <arg>--pinentry-mode</arg>
+                        <arg>loopback</arg>
+                    </gpgArguments>
                 </configuration>
             </plugin>
         </plugins>
