--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -249,17 +249,17 @@
             <!--    </configuration>-->
             <!--</plugin>-->
 
-            <!--<plugin>-->
-            <!--    <groupId>org.sonatype.plugins</groupId>-->
-            <!--    <artifactId>nexus-staging-maven-plugin</artifactId>-->
-            <!--    <version>1.6.8</version>-->
-            <!--    <extensions>true</extensions>-->
-            <!--    <configuration>-->
-            <!--        <serverId>ossrh</serverId>-->
-            <!--        <nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
-            <!--        <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-            <!--    </configuration>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-staging</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
