--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -42,10 +42,10 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
         server-id: sonatype-staging # Value of the distributionManagement/repository/id field of the pom.xml
-        server-username: ${{ secrets.MAVEN_USERNAME }} # env variable for username in deploy
-        server-password: ${{ secrets.MAVEN_CENTRAL_TOKEN }} # env variable for token in deploy
-        gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
-        gpg-passphrase: ${{ secrets.MAVEN_GPG_PASSPHRASE }} # env variable for GPG private key passphrase
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
+        gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+        gpg-passphrase: GPG_PASSPHRASE
 
     - name: Publish to Apache Maven Central
       run: mvn clean deploy -B -pl mybatis-hotswap-springboot-starter  -am
