--- a/mybatis-hotswap-springboot-starter/pom.xml
+++ b/mybatis-hotswap-springboot-starter/pom.xml
@@ -7,12 +7,14 @@
         <version>2.6.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.youtiaoguagua.mybatis</groupId>
 
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
 
+    <groupId>com.youtiaoguagua.mybatis</groupId>
     <artifactId>mybatis-hotswap-springboot-starter</artifactId>
+    <version>1.0.0</version>
+
     <name>springboot-mybatis-hotswap-starter</name>
     <description>springboot-mybatis-hotswap-starter</description>
 
@@ -20,6 +22,7 @@
         <java.version>1.8</java.version>
         <dir.watch>0.15.0</dir.watch>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -250,18 +253,29 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>sonatype-staging</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                </configuration>
-            </plugin>
+            <!--<plugin>-->
+            <!--    <groupId>org.sonatype.plugins</groupId>-->
+            <!--    <artifactId>nexus-staging-maven-plugin</artifactId>-->
+            <!--    <version>1.6.8</version>-->
+            <!--    <extensions>true</extensions>-->
+            <!--    <configuration>-->
+            <!--        <serverId>sonatype-staging</serverId>-->
+            <!--        <nexusUrl>https://s01.oss.sonatype.org</nexusUrl>-->
+            <!--        <autoReleaseAfterClose>true</autoReleaseAfterClose>-->
+            <!--    </configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-snapshots</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>sonatype-staging</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
 
 </project>
